--- a/frontend/src/styles/_table.css
+++ b/frontend/src/styles/_table.css
@@ -6,13 +6,13 @@
   thead {
     @apply text-xs bg-gray-90 sticky top-0 z-10;
   }
-  
+
   tbody {
     @apply text-sm;
   }
 
   tbody tr {
-    @apply duration-150 transition-all h-[94px];
+    @apply duration-150 transition-all h-[94px] border-b-1 border-b-gray-90;
   }
 
   tr {
@@ -22,6 +22,7 @@
   th {
     @apply text-left py-2 text-gray-50 text-xs;
   }
+
   td {
     @apply text-left py-[5px] text-white text-sm;
   }
